--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "discord-clone",
-  "version": "1.0.0",
+  "name": "brick chat",
+  "version": "2.0.0",
   "main": "server.js",
   "dependencies": {
     "express": "^4.18.2",
